# rust-stringprep

./: .travis.yml  Cargo.toml  README.md  circle.yml
.github/workflows/: ci.yml
codegen/: Cargo.toml
codegen/src/: main.rs
script/: generate_rfc3454.rs
src/: lib.rs  rfc3454.rs  tables.rs
tests/: nameprep_tests.rs  nodeprep_tests.rs  saslprep_tests.rs
