[package]
name = "stringprep"
version = "0.1.2"
authors = ["Steven Fackler <sfackler@gmail.com>"]
license = "MIT/Apache-2.0"
description = "An implementation of the stringprep algorithm"
repository = "https://github.com/sfackler/rust-stringprep"
documentation = "https://docs.rs/stringprep/0.1.2/stringprep"
readme = "README.md"

[dependencies]
unicode-bidi = "0.3"
unicode-normalization = "0.1"
